# VideoDocRAG

./: .gitignore  README.md  RUN.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CHANGELOG.md  commands.md
docs/features/: audio-extraction.md  chat.md  chunking.md  code-extraction.md  codebase-sync.md  doctor-setup.md  documentation-export.md  documentation-outline.md  documentation-review.md  embedding.md  external-source-paths.md  frame-extraction.md  ingest.md  markdown-generation.md  ocr.md  pipeline-run.md  project-initialization.md  project-registry.md  retrieval-rag.md  scan.md  slugify.md  status-inspect.md  transcription.md  vector-indexing.md
tests/: conftest.py
tests/cli/: test_cli_ask_command.py  test_cli_chat_command.py  test_cli_chunk_command.py  test_cli_code_command.py  test_cli_doctor_command.py  test_cli_embed_command.py  test_cli_export_command.py  test_cli_extract_audio_command.py  test_cli_frames_command.py  test_cli_generate_command.py  test_cli_index_command.py  test_cli_index_docs_command.py  test_cli_ingest_command.py  test_cli_inspect_command.py  test_cli_ocr_command.py  test_cli_outline_command.py  test_cli_project_commands.py  test_cli_regenerate_command.py  test_cli_review_command.py  test_cli_run_command.py  test_cli_scan_command.py  test_cli_setup_command.py  test_cli_status_command.py  test_cli_sync_codebase_command.py  test_cli_transcribe_command.py  test_output.py  test_progress.py
tests/core/: test_audio_extraction_service.py  test_chat_service.py  test_chunk_manifest.py  test_chunking_service.py  test_code_detection.py  (+49 more)
(+91 files in other folders)
