[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videodocrag"
version = "0.1.0"
description = "Local system to turn technical videos into RAG-generated Markdown documentation."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
videodoc = "videodoc.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/videodoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
